--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -5,6 +5,8 @@ on: [push, pull_request]
 jobs:
   package:
 
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 11
