--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,7 @@ jobs:
           GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
           GITHUB_PASSWORD: ${{ secrets.GITHUB_PASSWORD }}
         run: |
-          mvn --settings .github/settings.xml --file pom.xml deploy
+          mvn --settings .github/settings.xml \
+              -Dspring.config.location=.github/application.yml \
+              --file pom.xml \
+              deploy
